# tasks

./: CMakeLists.txt
example/: CMakeLists.txt  lambda_example.cpp  main.cpp  struct_example.cpp
include/tasks/: Allocator.h  Queue.h  Scheduler.h  ThreadUtilities.h
src/: CMakeLists.txt  ThreadUtilities.cpp
test/: CMakeLists.txt  task_test.cpp
